appId: com.example.spareseat
---
- launchApp:
    clearState: true
- tapOn: "Get Started"
- tapOn: "Phone"
- tapOn:
    id: "tilEmail"
- inputText: "4505140000"
- tapOn:
    id: "tilPassword"
- inputText: "123456aA"
- tapOn: "Sign In"
- extendedWaitUntil:
    visible: "Host Dashboard"
    timeout: 10000
